# md-api

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  users.json
src/: auth.rs  main.rs  r2.rs
static/: index.html
