[package]
name = "r2-storage-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
aws-sdk-s3 = { version = "1.12", features = ["behavior-version-latest"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
bcrypt = "0.15"
rand = "0.8"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.5.0"
uuid = { version = "1.19.0", features = ["v4"] }
